welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var p:Int =nums.length
	if (nums.length == 0){
		return -1
	}else{
		for(j<- 0 to p)
		return 2
	}
	

}
